<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">ACME Currency Convertor</string>    
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="save_text">Saved Text</string>
    <string name="update_text">Update text</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <!-- Color Schemes names -->
    <string name="colorscheme">Colors</string>
    <string name="nature">Nature</string>
    <string name="night">Night</string>
    <string name="fluro">Fluro</string>
    <string name="construction">Construction</string>
    <string name="standard">Default</string> 
    <!-- Text names -->
    <string name="textsize">Text</string>
    <string name="txt_sml">Small Text</string>
    <string name="txt_med">Med Text</string>
    <string name="txt_lrg">Large Text</string>
    <!-- Font Names -->    
	<string name="font">Font</string>
	<string name="font_arial">Arial</string>
	<string name="font_tahoma">Tahoma</string>
	<string name="font_calibiri">Calibiri</string>
	<string name="default_font">Default</string>

</resources>
