<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical"
    tools:context="com.example.acmecurrencyconvertor.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="44dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:inputType="none|numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical" >

            <NumberPicker
                android:id="@+id/numPicker1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:scaleX="0.75"
                android:scaleY="0.75" />

            <NumberPicker
                android:id="@+id/numPicker2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:scaleX="0.75"
                android:scaleY="0.75" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="0dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_update" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save_text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/update_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>